# fattura_xml_to_pdf

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py
src/styles/: __init__.py  aruba.xsl  sdi.xsl
